--- a/src/static/index.html
+++ b/src/static/index.html
@@ -12,6 +12,9 @@
     />
   </head>
   <body>
+    <div class="announcement-banner" aria-label="Important announcement: Activity registration is open until the end of the month. Don't lose your spot!">
+    <span aria-hidden="true">📢</span> <strong>Important announcement:</strong> Activity registration is open until the end of the month. Don't lose your spot!
+  </div>
     <header>
       <h1>Mergington High School</h1>
       <h2>Extracurricular Activities</h2>
